better website doco

--- a/webgen/src/index.page
+++ b/webgen/src/index.page
@@ -166,3 +166,6 @@ Example:
 {pygmentize:: java}
 indexFactory.setDeferredEncoding(true);
 {pygmentize}
+
+## References
+* [Full API]({api_base:}/api/package-summary.html)
