--- a/webgen/src/community.page
+++ b/webgen/src/community.page
@@ -8,51 +8,46 @@ sort_info: 50
 The {project_name:} community is here to help you
 
 --- name:content
+
+<div class="left" markdown="1">
+# Blog
+</div>
+<div class="right" markdown="1">
+Keep up to date on the latest and greatest releases by following the [{project_name:} Blog](blog/index.html)
+
+</div>
+
+<div class="left" markdown="1">
+# Mailing List
+</div>
+<div class="right" markdown="1">
 We really want you to get involved in the {project_name:} and we love [contributions](contributing.html). One of the easiest ways to get involved is to join the community discussions.
 
-<!-- 
-# Nabble Forum
+The main mailing list is hosted at the [{project_id:} google group](http://groups.google.com/group/{project_id:}).
 
-The mailing lists are all mirrored with an online forum at Nabble
+ * [http://groups.google.com/group/{project_id:}](http://groups.google.com/group/{project_id:})
 
-* [hawtdb-dev](http://n3.nabble.com/HawtJNI-Dev-f212345.html)
-* [hawtdb-commits](http://n3.nabble.com/HawtJNI-Commits-f212350.html) 
--->
+Please join us! 
 
-# Developer Mailing List
+Be aware that to reduce spam your first post will be moderated through; so please be patient. (Unfortunately we get a lot of spam)
 
-The developer list is used for general discussions and ideas about the code and how to use it.
+</div>
 
-<table cellspacing="10">
-  <tr>
-    <th align="left">To post an email:</th>
-    <td><a href="mailto:{project_id:}-dev@fusesource.org">{project_id:}-dev@fusesource.org</a></td>
-  </tr>
-  <tr>
-    <th align="left">To subscribe:</th>
-    <td><a href="mailto:{project_id:}-dev-subscribe@fusesource.org">{project_id:}-dev-subscribe@fusesource.org</a></td>
-  </tr>
-  <tr>
-    <th align="left">To unsubscribe:</th>
-    <td><a href="mailto:{project_id:}-dev-unsubscribe@fusesource.org">{project_id:}-dev-unsubscribe@fusesource.org</a></td>
-  </tr>
-</table>
+<div class="left" markdown="1">
+# Commits List
+</div>
+<div class="right" markdown="1">
+The [{project_id:}-commits google group](http://groups.google.com/group/{project_id:}-commits) is notified of all changes to the source code or changes to [issues](support.html) so you can use this list to watch development and support occur.
 
-# Commit Mailing List
+* [http://groups.google.com/group/{project_id:}-commits](http://groups.google.com/group/{project_id:}-commits)
 
-The commit list is notified of all changes to the source code or changes to [issues](support.html) so you can use this list to watch development and support occur.
+</div>
 
-<table cellspacing="10">
-  <tr>
-    <th align="left">To post an email:</th>
-    <td><a href="mailto:{project_id:}-commits@fusesource.org">{project_id:}-commits@fusesource.org</a></td>
-  </tr>
-  <tr>
-    <th align="left">To subscribe:</th>
-    <td><a href="mailto:{project_id:}-commits-subscribe@fusesource.org">{project_id:}-commits-subscribe@fusesource.org</a></td>
-  </tr>
-  <tr>
-    <th align="left">To unsubscribe:</th>
-    <td><a href="mailto:{project_id:}-commits-unsubscribe@fusesource.org">{project_id:}-commits-unsubscribe@fusesource.org</a></td>
-  </tr>
-</table>
+<div class="left" markdown="1">
+# Support
+</div>
+<div class="right" markdown="1">
+  If you have a problem you can [get help](support.html) or try surfing our [Issue Tracker]({project_issue_url:})
+</div>
+
+
