--- a/webgen/src/downloads/index.page
+++ b/webgen/src/downloads/index.page
@@ -22,52 +22,92 @@ sort_info: 1
 # {project_name:}
 Download it Today!
 
---- name:content pipeline:haml,tags
+--- name:content pipeline:tags,markdown
 
-.left
-  %h1 Just need a jar?
-  
-.right
-  Try out the nightly build:
-  %ul
-    %li
-      %a{:href => "http://{project_id:}.fusesource.org/repo/snapshot/org/fusesource/{project_id:}/{project_id:}/{project_version:}/{project_id:}-{project_version:}.jar"}
-        {project_id:}-{project_version:}.jar
-    
+<div class="left" markdown="1">
+# Download
+</div>
+<div class="right" markdown="1">
+You can download **{project_name:}** from the [Maven Repository](http://repo.fusesource.com/nexus/content/repositories/public/) in the [{project_name:} area](http://repo.fusesource.com/nexus/content/repositories/public/org/fusesource/{project_id:}/).
 
-.left
-  %h1 Are you a Maven User?
-.right
-  %p
-    Just the following to your 
-    %code pom.xml
-    
-    :plain
-      {coderay:: xml}
-      <dependency>
-        <groupId>org.fusesource.{project_id:}</groupId>
-        <artifactId>{project_id:}</artifactId>
-        <version>{project_version:}</version>
-      </dependency>
-      {coderay}
+Download the jar:
 
-  %p    
-    You you should ensure you have the {project_id:} maven repository defined in your
-    %code pom.xml
-    :plain
-      {coderay:: xml}  
-      <repositories>
-        <repository>
-          <id>{project_id:}.release.m2</id>
-          <name>{project_name:} Snapshot Repository</name>
-          <url>http://{project_id:}.fusesource.org/repo/snapshot</url>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-        </repository>
-      </repositories>
-      {coderay}
+* [{release_version:} jar](http://repo.fusesource.com/nexus/content/repositories/public/org/fusesource/{project_id:}/{project_id:}/{release_version:}/{project_id:}-{release_version:}.jar)
+
+## Snapshots
+
+You can download a recent snapshot from the [Snapshot Maven Repository](http://repo.fusesource.com/nexus/content/repositories/snapshots/) in the [{project_name:} area](http://repo.fusesource.com/nexus/content/repositories/snapshots/org/fusesource/{project_id:}/).
+
+* [{snapshot_version:} jar](http://repo.fusesource.com/nexus/service/local/artifact/maven/redirect?r=snapshots&g=org.fusesource.{project_id:}&a={project_id:}&v={snapshot_version:}&e=jar)
+
+</div>
+
+<div class="left" markdown="1">
+# Maven
+</div>
+<div class="right" markdown="1">
+If you build your project using [Maven](http://maven.apache.org/) then just add the following to your *pom.xml*
+</div> 
+<div class="right">
+{coderay:: xml}<dependency>
+  <groupId>org.fusesource.{project_id:}</groupId>
+  <artifactId>{project_id:}</artifactId>
+  <version>${{project_id:}-version}</version>  
+</dependency>
+{coderay}
+</div>
+
+<div class="right" markdown="1">
+The releases should be synchronized to the [central maven repository](http://repo1.maven.org/maven2/org/fusesource/{project_id:}/) so you should not need to add a maven repository to your pom.xml. 
+
+However if a release has not yet made it to the central repository or you want to add a repository for completeness, add the following to your *pom.xml*
+</div>
+<div class="right">
+{pygmentize:: xml}  <repositories>
+   <repository>
+     <id>fusesource.m2</id>
+     <name>FuseSource Public Repository</name>
+     <url>http://repo.fusesource.com/nexus/content/repositories/public</url>
+     <snapshots>
+       <enabled>false</enabled>
+     </snapshots>
+     <releases>
+       <enabled>true</enabled>
+     </releases>
+   </repository>
+ </repositories>
+{pygmentize}
+</div>
+
+<div class="right" markdown="1">
+## Snapshots
+
+If you want to use a **snapshot version** you should ensure you have the {project_name:} Snapshot Maven repository defined in your *pom.xml*
+</div> 
+<div class="right">
+{pygmentize:: xml}  <repositories>
+   <repository>
+     <id>fusesource.snapshots</id>
+     <name>FuseSource Snapshot Repository</name>
+     <url>http://repo.fusesource.com/nexus/content/repositories/snapshots</url>
+     <snapshots>
+       <enabled>true</enabled>
+     </snapshots>
+     <releases>
+       <enabled>false</enabled>
+     </releases>
+   </repository>
+ </repositories>
+{pygmentize}
+</div>
+
+
+<div class="left" markdown="1">
+# Building
+</div>
+
+<div class="right" markdown="1">
+If you prefer you can try building from [the source code](source.html) and [building it](building.html)
+</div>
+
       
